PortFolio/PF-K8s/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pf2-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: pf2.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: pf2-svc
            port:
              number: 80
